Switched input to use the new input system

--- a/DebugConsole.asmdef
+++ b/DebugConsole.asmdef
@@ -2,7 +2,8 @@
     "name": "DebugConsole",
     "references": [
         "Unity.TextMeshPro",
-        "Unity.ugui"
+        "Unity.ugui",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
